create pwd_gen with Js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+   <header></header>
+   <main>
+       <div id="pwd_gen"></div>
+   </main>
+   <footer></footer>
+   <!-- scripts -->
+   <script src="js/script.js"></script> 
 </body>
 </html>
